[package]
name = "ccr"
description = "A Cloudflare Worker proxy that enables Claude Code to access OpenRouter's diverse model selection"
repository = "https://github.com/duyet/ccr.duyet.net"
version = "0.1.0"
edition = "2021"
authors = ["Duyet Le <me@duyet.net>", "Claude Code"]
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
worker = "0.6.0"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
futures = "0.3"
web-sys = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"
uuid = { version = "1.0", features = ["v4"] }
